--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=2">
+  </head>
+  <body>
 <h1>이선진's 홈페이지</h1>
 <a href="PI.html">PI</a><br>
 <a href="numGuess4.html">NUM Guess</a><br>
+    </body>
+  </html>
