--- a/numGuess4.html
+++ b/numGuess4.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=2">
 <title>연습</title>
 </head>
 <body>
