--- a/PI.html
+++ b/PI.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=2">
 <title>파이 구하기</title>
 </head>
 <body><script>
