--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <h1>이선진's 홈페이지</h1>
 <a href="PI.html">PI</a><br>
 <a href="numGuess4.html">NUM Guess</a><br>
+<a href="ex/myProject.html">내 프로젝트</a><br>
     </body>
   </html>
