--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <h1>이선진's 홈페이지</h1>
 <a href="PI.html">PI</a><br>
 <a href="numGuess4.html">NUM Guess</a><br>
-<a href="ex/myProject.html">내 프로젝트</a><br>
+<a href="midterm examination/[1].html">중간고사 [1]</a><br>
+<a href="midterm examination/[2].html">중간고사 [2]</a><br>
+<a href="midterm examination/[3].html">중간고사 [3]</a><br>
+<a href="midterm examination/[4].html">중간고사 [4]</a><br>
     </body>
   </html>
