--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=2">
   </head>
   <body>
-<h1>이선진's 홈페이지</h1>
-<a href="PI.html">PI</a><br>
-<a href="numGuess4.html">NUM Guess</a><br>
-<a href="ex/myProject.html">내 프로젝트</a><br>
-<a href="midterm/1.html">중간고사 [1]</a><br>
-<a href="midterm/2.html">중간고사 [2]</a><br>
-<a href="midterm/3.html">중간고사 [3]</a><br>
-<a href="midterm/4.html">중간고사 [4]</a><br>
+<h1>서울시 안내</h1>
+<a href="PI.html">볼거리</a><br>
+<a href="numGuess4.html">먹거리</a><br>
+<a href="ex/myProject.html">즐길거리</a><br>
     </body>
   </html>
