--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=2">
   </head>
   <body>
-<h1>서울시 안내</h1>
-<a href="PI.html">볼거리</a><br>
-<a href="numGuess4.html">먹거리</a><br>
-<a href="ex/myProject.html">즐길거리</a><br>
+<h1>The foundation of MATH</h1>
+<a href="PI.html">대수의 성질</a><br>
+<a href="numGuess4.html">기하의 성질</a><br>
+<a href="ex/myProject.html">미적분의 계산법</a><br>
     </body>
   </html>
