--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
 </head>
 <body>
   <div class = 'grid'> <!-- 배경이 될 div -->
-    <a href="https://SJ-1011.github.io/disc2022"><img id = "title" src="title.jpg"></img></a>
+    <a href="https://SJ-1011.github.io/disc2022"><img id = "title" src="images/title.jpg"></img></a>
     <h1><br/>원하는 카테고리를 선택하세요.<br/></h1>
     <!-- 아이콘 -->
     <table id = "tb">
       <tr>
         <td>
-          <img id="icon1" src="icon1.jpg"/>
+          <img id="icon1" src="images/icon1.jpg"/>
         </td>
         <td>
-          <img id="icon2" src="icon2.jpg"/>
+          <img id="icon2" src="images/icon2.jpg"/>
         </td>
         <td>
-          <img id="icon3" src="icon3.jpg"/>
+          <img id="icon3" src="images/icon3.jpg"/>
         </td>
         <td>
-          <img id="icon4" src="icon4.jpg"/>
+          <img id="icon4" src="images/icon4.jpg"/>
         </td>
       </tr>
       <tr>
