--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         <td>삼각법</td>
         <td>미적분</td>
       </tr>
+      </table>
+    <div id="grid2"></div>
   </div>
+
   <script src="main.js"></script>
 </body>
 </html>
