--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>The foundation of MATH</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -28,11 +28,13 @@
       <tr>
         <td>대수</td>
         <td>기하</td>
-        <td>삼각법</td>
         <td>미적분</td>
+        <td>스택쌓기 게임</td>
       </tr>
       </table>
     <div id="grid2"></div>
+    <div id="grid3">
+    </div>
   </div>
 
   <script src="main.js"></script>
